--- a/planetstyles.css
+++ b/planetstyles.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("space.jpg");
+    background-image: url("img/space.jpg");
     background-repeat: no-repeat;
     background-size:  100vw 100vh;
   }
