--- a/shopstyles.css
+++ b/shopstyles.css
@@ -2,8 +2,20 @@ body {
   background-image: url("img/shopimage.jpg");
   background-repeat: no-repeat;
   background-size: 100vw 100vh;
+  animation: fadeInAnimation ease 2s;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
 }
 
+
+@keyframes fadeInAnimation {
+  0% {
+      opacity: 0;
+  }
+  100% {
+      opacity: 1;
+  }
+}
 
 .dot {
   height: 100px;
