--- a/planetstyles.css
+++ b/planetstyles.css
@@ -13,10 +13,11 @@ body {
     display: inline-block;
   }
 
-  .buttons{
-    padding-left:34vw;
-    padding-top:40vh;
-}
+  .buttons {
+    padding-left: 4vw;
+    padding-top: 3vh;
+    padding-right: 60vw;
+  }
   .button {
     display: inline-block;
     padding: 15px 25px;
@@ -70,3 +71,141 @@ body {
     padding: 15px;
     text-align: center;
   }
+
+  
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+/*** CSS - APP LAYOUT ***/
+.app-wrapper {
+  display: grid;
+  grid-template-rows: minmax(50px, 150px) minmax(300px, 1fr) minmax(25px, 100px);
+  width: 100%;
+  height: 100%;
+}
+
+.app-header,
+.app-footer {
+  background-color: #252525;
+}
+
+.app-body {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  background-color: #808080;
+}
+
+.app-header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.app-header>h1 {
+  color: #ffffff;
+  mix-blend-mode: difference;
+}
+
+/*** CSS - APP USE ***/
+.btn-wrapper:not(:first-child) {
+  margin-top: 15px;
+}
+
+.btn-wrapper {/*** change scifi button height here with "height" ***/
+  display: grid;
+  grid-template-columns: 20px auto;
+  grid-gap: 10px;
+  min-width: 250px;
+  height: 70px;
+  margin-left: 10px;
+  transform: skewX(-30deg);
+
+  --bg-color: #fffff0;
+  --font-color: #000000;
+  --bg-color-hovered: #29cacd;
+  --font-color-hovered: #000000;
+}
+
+.btn-wrapper>* {
+  background-color: var(--bg-color);
+}
+
+.btn-wrapper:hover .btn-tail {
+  background-color: var(--bg-color-hovered);
+}
+
+.btn-body {
+  position: relative;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  color: var(--font-color);
+}
+
+.btn-wrapper:hover .btn-body {
+  color: var(--font-color-hovered);
+}
+
+.btn-body::before {
+  content: "";
+  position: absolute;
+  width: 0;
+  height: 100%;
+  left: 0;
+  top: 0;
+  background-color: var(--bg-color-hovered);
+  transition: all 0.3s ease-out;
+}
+
+.btn-wrapper:hover .btn-body::before {
+  width: 100%;
+}
+
+.btn-body p {
+  margin-left: 15px;
+  font-size: 1.5rem;
+  text-transform: uppercase;
+  transform: skewX(30deg);
+}
+
+.btn-tail {
+  transition: all 0s ease-out 0.3s;
+}
+
+.btn-wrapper:hover .btn-tail {
+  transition: none;
+}
+
+
+@import url(https://fonts.googleapis.com/css?family=Khula:700);
+
+.hidden {
+  opacity:0;
+}
+.console-container {
+ 
+  font-family:Khula;
+  font-size:7vh;
+  text-align:center;
+  height: 7vh;
+  width:100vw;
+  display:block;
+  position:absolute;
+  color:white;
+  top:0;
+  bottom:0;
+  left:0;
+  right:0;
+  margin-left:0vw;
+ 
+}
+.console-underscore {
+   display:inline-block;
+  position:relative;
+  top:-0.14em;
+  left:10px;
+}
